update  full  project

--- a/app/views/Shared/_Footer.html.erb
+++ b/app/views/Shared/_Footer.html.erb
@@ -4,6 +4,7 @@
       
       <!-- Brand and Description -->
       <div>
+       <%= image_tag("orgratro_it.png",class: "w-[40px] h-[40px] rounded")%>
         <a href="#" class="text-2xl font-bold text-indigo-600">Orgratro It Traffics</a>
         <p class="mt-4 text-gray-600 leading-relaxed">
           Empowering your business with premium digital solutions. Trusted by thousands worldwide.
