--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,6 +40,8 @@
     }
   </style>
 </head>
+
+<%= render "Shared/Top_Employee"%>
 <body class="bg-white text-gray-800">
 
   <!-- Main Hero Section -->
@@ -51,10 +53,8 @@
       <p class="text-lg md:text-xl text-gray-700 mb-10 max-w-3xl mx-auto">
         Unlock powerful analytics, actionable data, and premium tools to boost your digital growth and stay ahead of the competition.
       </p>
-      <a href="#get-started" 
-         class="inline-block px-8 py-4 bg-indigo-600 text-white font-semibold rounded-lg shadow-lg hover:bg-indigo-700 transition duration-300">
-        Get Started Now
-      </a>
+      <%= link_to "Get Started Now", new_user_registration_path,class: "inline-block px-8 py-4 bg-indigo-600 text-white font-semibold rounded-lg shadow-lg hover:bg-indigo-700 transition duration-300"
+       %>
     </section>
   </main>
 
