--- a/app/views/user_profile/advatiser.html.erb
+++ b/app/views/user_profile/advatiser.html.erb
@@ -21,10 +21,10 @@
         <h1 class="text-xl font-bold text-primary">Admin Panel</h1>
       </div>
       <nav class="px-6 space-y-2">
-        <a href="#" class="block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium">Dashboard</a>
-        <a href="#" class="block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium">Users</a>
-        <a href="#" class="block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium">Traffic</a>
-        <a href="#" class="block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium">Settings</a>
+        <%= link_to "Dashbord",user_profile_advatiser_path,class: "block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium"%>
+        <%= link_to "Sent Link",new_instruction_path, class: "block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium"%>
+        <%= link_to "Show Click",instructions_path(@instructions) ,class: "block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium"%>
+        <%= link_to "Settings",edit_admin_registration_path,class: "block px-4 py-2 rounded hover:bg-gray-100 text-gray-700 font-medium"%>
        
       </nav>
     </aside>
@@ -65,6 +65,11 @@
             <p class="text-2xl font-bold text-green-600"><%= number_to_currency(@total_revinue) %></p>
           </div>
           <div class="bg-white shadow rounded-xl p-6">
+            <h3 class="text-sm text-gray-500">Intern/My Work </h3>
+            <p class="text-2xl font-bold text-green-600"> <%= @instructions.sum { |instruction| instruction.instruction_clicks.count } %>
+ </p>
+          </div>
+          <div class="bg-white shadow rounded-xl p-6">
             <h3 class="text-sm text-gray-500">Active Links</h3>
             <p class="text-3xl font-bold text-primary mt-1"><%= number_with_delimiter(@total_active_link) %></p>
           </div>
@@ -80,6 +85,30 @@
             <% end %>
           </ul>
         </div>
+         <div class="bg-white p-6 rounded-xl shadow">
+        <h2 class="text-xl font-bold mb-4 text-gray-800">Top Users by Clicks</h2>
+        <div class="overflow-x-auto">
+          <table class="min-w-full text-sm text-left border">
+            <thead class="bg-gray-100 text-gray-700 font-semibold">
+              <tr>
+                <th class="px-4 py-2 border-b">User</th>
+                <th class="px-4 py-2 border-b">Email</th>
+                <th class="px-4 py-2 border-b">Total Clicks</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @top_users.each do |user| %>
+                <tr class="hover:bg-gray-50 border-b">
+                 
+                  <td class="px-4 py-2"><%= user.email.split('@').first.gsub(/\d/, '').gsub(/[^a-zA-Z]/, '').capitalize %></td>
+                  <td><%= user.email%></td>
+                  <td class="px-4 py-2 font-semibold text-indigo-600"><%= user.clicks_count %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
       </main>
     </div>
   </div>
