--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
     <link rel="icon" href="<%= asset_path('orgratro_it.svg') %>" type="image/x-icon">  
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/chart.js", defer: true %>
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
